Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:23+0200\n"
+"PO-Revision-Date: 2011-08-10 08:38+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9822,6 +9822,8 @@ msgid ""
 "table is supported by MySQL 5.1.6 and onwards. You may still use the server "
 "charting features however."
 msgstr ""
+"很遗憾你的数据库服务器不支持日志记录到表，这是使用 phpMyAdmin 分析数据库日志的必要功能。MySQL 自 5.1.6 "
+"起有该功能。但你仍然可以使用服务器图表功能。"
 
 #: server_status.php:1458
 msgid ""
