Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:38+0200\n"
+"PO-Revision-Date: 2011-08-10 08:44+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9836,6 +9836,9 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them.</p>"
 msgstr ""
+"<b>使用监控:</b><br/> 现在我们可以开始了！当你点击 '开始监控' 时你的浏览器会以一定间隔时间刷新所有的图表。你可以通过 '设置' 添加图"
+"表或修改刷新频率，或通过图表各自的齿轮图标来移除图表。<p>要想显示日志所记录的查询，请在图表上通过按住鼠标左键的拖拽操作选择相应的时间段。确认后即可显"
+"示出分组后的查询，你可以通过点击其中的 SELECT 语句获得进一步分析。</p>"
 
 #: server_status.php:1463
 msgid ""
