--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:47+0200\n"
+"PO-Revision-Date: 2011-08-10 08:50+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9878,7 +9878,7 @@ msgstr "选择数据:"
 
 #: server_status.php:1488
 msgid "Commonly monitored"
-msgstr ""
+msgstr "常用监控"
 
 #: server_status.php:1503
 #| msgid "Invalid table name"
