Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:53+0200\n"
+"PO-Revision-Date: 2011-08-10 08:55+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -8979,10 +8979,9 @@ msgid "Runtime Information"
 msgstr "运行信息"
 
 #: server_status.php:650
-#, fuzzy
 #| msgid "See slave status table"
 msgid "All status variables"
-msgstr "查看从服务器状态"
+msgstr "所有状态变量"
 
 #: server_status.php:651
 msgid "Monitor"
