Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8985,7 +8985,7 @@ msgstr "所有状态变量"
 
 #: server_status.php:651
 msgid "Monitor"
-msgstr ""
+msgstr "监控"
 
 #: server_status.php:652
 msgid "Advisor"
