--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:55+0200\n"
+"PO-Revision-Date: 2011-08-10 08:56+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -8989,7 +8989,7 @@ msgstr "监控"
 
 #: server_status.php:652
 msgid "Advisor"
-msgstr ""
+msgstr "建议"
 
 #: server_status.php:662 server_status.php:684
 #, fuzzy
