--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:58+0200\n"
+"PO-Revision-Date: 2011-08-10 08:59+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9011,10 +9011,9 @@ msgid "Filter by category..."
 msgstr "按分类显示"
 
 #: server_status.php:727
-#, fuzzy
 #| msgid "Show open tables"
 msgid "Show unformatted values"
-msgstr "显示打开的表"
+msgstr "显示原始值"
 
 #: server_status.php:731
 #, fuzzy
