Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 08:59+0200\n"
+"PO-Revision-Date: 2011-08-10 09:06+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9034,6 +9034,10 @@ msgid ""
 "at a time, observe or benchmark your database, and\n"
 "        undo the change if there was no clearly measurable improvement."
 msgstr ""
+"建议系统可以通过分析服务器状态变量来提供建议。\n"
+"        请注意本系统的建议基于相当简单的规则和计算且可能不适用于你的系统。\n"
+"        在修改任何设置前，请确保你知道你在修改什么以及如何恢复。错误的修改可能导致截然相反的结果。\n"
+"        调整系统的最佳方式为一次只修改一个设置，然后检查并测试你的数据库，若没有显著的性能提升则恢复设置。"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: server_status.php:791
