--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:09+0200\n"
+"PO-Revision-Date: 2011-08-10 09:10+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -9066,7 +9066,7 @@ msgstr "说明"
 #. l10n: # = Amount of queries
 #: server_status.php:830
 msgid "#"
-msgstr ""
+msgstr "查询数量"
 
 #: server_status.php:898
 #, php-format
