--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:23+0200\n"
+"PO-Revision-Date: 2011-08-10 09:24+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1331,7 +1331,7 @@ msgstr "差异"
 #: js/messages.php:154
 #, php-format
 msgid "Divided by %s:"
-msgstr ""
+msgstr "除以 %s:"
 
 #: js/messages.php:156
 msgid "From slow log"
