--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:25+0200\n"
+"PO-Revision-Date: 2011-08-10 09:26+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1343,7 +1343,7 @@ msgstr "从通用日志"
 
 #: js/messages.php:158
 msgid "Analysing & loading logs. This may take a while."
-msgstr ""
+msgstr "正在加载并分析日志。请稍候。"
 
 #: js/messages.php:159
 msgid ""
