--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:34+0200\n"
+"PO-Revision-Date: 2011-08-10 09:36+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1385,7 +1385,7 @@ msgstr "快速搜索"
 
 #: js/messages.php:170
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "根据内容/正则表达式搜索:"
 
 #: js/messages.php:171
 msgid "Group queries, ignoring variable data in WHERE clauses"
