Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1426,7 +1426,7 @@ msgstr "重新载入页面"
 
 #: js/messages.php:180
 msgid "Affected rows: "
-msgstr ""
+msgstr "影响的行数: "
 
 #: js/messages.php:182
 msgid "Failed parsing config file. It doesn't seem to be valid JSON code"
