--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:40+0200\n"
+"PO-Revision-Date: 2011-08-10 09:42+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1510,10 +1510,9 @@ msgid "Insert Table"
 msgstr "使用表"
 
 #: js/messages.php:210
-#, fuzzy
 #| msgid "Add index"
 msgid "Hide indexes"
-msgstr "添加索引"
+msgstr "隐藏索引"
 
 #: js/messages.php:211
 #, fuzzy
