--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 09:42+0200\n"
+"PO-Revision-Date: 2011-08-10 10:06+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1584,10 +1584,9 @@ msgid "Change"
 msgstr "修改"
 
 #: js/messages.php:235
-#, fuzzy
 #| msgid "Maximum execution time"
 msgid "Query execution time"
-msgstr "最长执行时间"
+msgstr "查询执行时间"
 
 #: js/messages.php:238
 msgid "Hide search criteria"
