--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 10:06+0200\n"
+"PO-Revision-Date: 2011-08-10 10:07+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1667,7 +1667,7 @@ msgstr "已更新"
 
 #: js/messages.php:272
 msgid "Drag to reorder"
-msgstr ""
+msgstr "拖拽以调整顺序"
 
 #: js/messages.php:273
 #, fuzzy
