--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 10:07+0200\n"
+"PO-Revision-Date: 2011-08-10 10:10+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1680,7 +1680,7 @@ msgstr "点击以标记/取消标记"
 
 #: js/messages.php:275
 msgid "Click the drop-down arrow<br />to toggle column's visibility"
-msgstr ""
+msgstr "点击下箭头以设置显示的字段"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:294
