--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6777,10 +6777,9 @@ msgstr "处理请求时的错误"
 
 #: libraries/rte/rte_events.lib.php:371 libraries/rte/rte_routines.lib.php:817
 #: libraries/rte/rte_triggers.lib.php:298
-#, fuzzy
 #| msgid "Details..."
 msgid "Details"
-msgstr "详细..."
+msgstr "详细"
 
 #: libraries/rte/rte_events.lib.php:374
 #, fuzzy
