--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6782,10 +6782,9 @@ msgid "Details"
 msgstr "详细"
 
 #: libraries/rte/rte_events.lib.php:374
-#, fuzzy
 #| msgid "Event type"
 msgid "Event name"
-msgstr "事件类型"
+msgstr "事件名称"
 
 #: libraries/rte/rte_events.lib.php:395 server_binlog.php:182
 msgid "Event type"
