--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6805,10 +6805,9 @@ msgid "Execute every"
 msgstr "运行周期"
 
 #: libraries/rte/rte_events.lib.php:449
-#, fuzzy
 #| msgid "Startup"
 msgid "Start"
-msgstr "起始页"
+msgstr "开始"
 
 #: libraries/rte/rte_events.lib.php:465 libraries/rte/rte_routines.lib.php:912
 #: libraries/rte/rte_triggers.lib.php:352
