--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6829,7 +6829,7 @@ msgstr "用户"
 #: libraries/rte/rte_events.lib.php:518 libraries/rte/rte_routines.lib.php:986
 #: libraries/rte/rte_triggers.lib.php:396
 msgid "The definer must be in the \"username@hostname\" format"
-msgstr ""
+msgstr "用户必须是 \"用户名@主机名\" 格式"
 
 #: libraries/rte/rte_events.lib.php:525
 msgid "You must provide an event name"
