--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6837,7 +6837,7 @@ msgstr "请输入事件名称"
 
 #: libraries/rte/rte_events.lib.php:537
 msgid "You must provide a valid interval value for the event."
-msgstr "请设置有效的周期。"
+msgstr "请设置有效的运行周期。"
 
 #: libraries/rte/rte_events.lib.php:549
 msgid "You must provide a valid execution time for the event."
