--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6849,7 +6849,7 @@ msgstr "请选择一个有效的事件类型。"
 
 #: libraries/rte/rte_events.lib.php:572
 msgid "You must provide an event definition."
-msgstr ""
+msgstr "请输入事件定义。"
 
 #: libraries/rte/rte_footer.lib.php:29
 msgid "New"
