--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6853,7 +6853,7 @@ msgstr "请输入事件定义。"
 
 #: libraries/rte/rte_footer.lib.php:29
 msgid "New"
-msgstr ""
+msgstr "新建"
 
 #: libraries/rte/rte_footer.lib.php:91
 msgid "OFF"
