--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 10:38+0200\n"
+"PO-Revision-Date: 2011-08-10 10:42+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -5263,10 +5263,9 @@ msgid "Language"
 msgstr "Language"
 
 #: libraries/display_tbl.lib.php:401
-#, fuzzy
 #| msgid "Textarea columns"
 msgid "Restore column order"
-msgstr "文本框列"
+msgstr "恢复字段顺序"
 
 #: libraries/display_tbl.lib.php:431
 #, php-format
