--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 10:42+0200\n"
+"PO-Revision-Date: 2011-08-10 10:46+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -5415,7 +5415,7 @@ msgstr "显示图表"
 
 #: libraries/display_tbl.lib.php:2525
 msgid "Visualize GIS data"
-msgstr ""
+msgstr "可视化 GIS 数据"
 
 #: libraries/display_tbl.lib.php:2545
 msgid "Create view"
