Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 10:50+0200\n"
+"PO-Revision-Date: 2011-08-10 10:53+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -6572,10 +6572,9 @@ msgid "SQL history"
 msgstr "SQL 历史"
 
 #: libraries/relation.lib.php:132
-#, fuzzy
 #| msgid "Persistent connections"
 msgid "Persistent recently used tables"
-msgstr "持久连接"
+msgstr "持久最近访问的表"
 
 #: libraries/relation.lib.php:136
 msgid "Persistent tables' UI preferences"
