--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6892,10 +6892,10 @@ msgid "Routine %1$s has been modified."
 msgstr "已修改程序 %1$s 。"
 
 #: libraries/rte/rte_routines.lib.php:286
-#, fuzzy, php-format
+#, php-format
 #| msgid "Table %1$s has been created."
 msgid "Routine %1$s has been created."
-msgstr "创建数据表 %1$s 成功。"
+msgstr "已创建程序 %1$s 。"
 
 #: libraries/rte/rte_routines.lib.php:344
 #, fuzzy
