--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:00+0200\n"
+"PO-Revision-Date: 2011-08-10 11:01+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -6903,10 +6903,9 @@ msgid "Edit routine"
 msgstr "编辑程序"
 
 #: libraries/rte/rte_routines.lib.php:820
-#, fuzzy
 #| msgid "Routines"
 msgid "Routine name"
-msgstr "常规"
+msgstr "程序名称"
 
 #: libraries/rte/rte_routines.lib.php:843
 msgid "Parameters"
