--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:03+0200\n"
+"PO-Revision-Date: 2011-08-10 11:04+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -6912,10 +6912,9 @@ msgid "Parameters"
 msgstr "参数"
 
 #: libraries/rte/rte_routines.lib.php:848
-#, fuzzy
 #| msgid "Direct links"
 msgid "Direction"
-msgstr "直接连接"
+msgstr "方向"
 
 #: libraries/rte/rte_routines.lib.php:851 libraries/tbl_properties.inc.php:108
 msgid "Length/Values"
