--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -6955,7 +6955,7 @@ msgstr "安全类型"
 
 #: libraries/rte/rte_routines.lib.php:934
 msgid "SQL data access"
-msgstr ""
+msgstr "SQL 数据访问"
 
 #: libraries/rte/rte_routines.lib.php:999
 msgid "You must provide a routine name"
