--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:09+0200\n"
+"PO-Revision-Date: 2011-08-10 11:11+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -6959,7 +6959,7 @@ msgstr "SQL 数据访问"
 
 #: libraries/rte/rte_routines.lib.php:999
 msgid "You must provide a routine name"
-msgstr ""
+msgstr "请输入程序名称"
 
 #: libraries/rte/rte_routines.lib.php:1025
 #, php-format
